force-app/main/default/objects/ConsumptionSchedule/fields/Accumulation_to_Target__c.field-meta.xml
<CustomField>
    <fullName>Accumulation_to_Target__c</fullName>
    <label>Accumulation to Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>