force-app/main/default/objects/ConsumptionSchedule/fields/Accumulator_Type__c.field-meta.xml
<CustomField>
    <fullName>Accumulator_Type__c</fullName>
    <label>OLD Accumulator Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ticket_Quantity</fullName>
                <label>Ticket Quantity</label>
            </value>
            <value>
                <fullName>Revenue_Amount</fullName>
                <label>Revenue Amount</label>
            </value>
            <value>
                <fullName>Advance Recoupment</fullName>
                <default>true</default>
                <label>Advance Recoupment</label>
            </value>
            <value>
                <fullName>Accumulation to Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>