force-app/main/default/objects/ConsumptionSchedule/fields/Actual_Balance__c.field-meta.xml
<CustomField>
    <fullName>Actual_Balance__c</fullName>
    <label>OLD Actual Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>