force-app/main/default/objects/ConsumptionSchedule/fields/Advanced_Custom_Logic__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Custom_Logic__c</fullName>
    <inlineHelpText>Based on the Conditions Number field , define logic eg :(1 OR 2 ) AND 3</inlineHelpText>
    <label>Advanced Custom Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>