force-app/main/default/objects/ConsumptionSchedule/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Consumption Schedules</relationshipLabel>
    <relationshipName>Consumption_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>