force-app/main/default/objects/ConsumptionSchedule/fields/Contracted_Price__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>old Contracted Price</label>
    <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
    <relationshipLabel>Consumption Schedules</relationshipLabel>
    <relationshipName>Consumption_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>