force-app/main/default/objects/ConsumptionSchedule/fields/FIN_ActiveTodayBasedonDates__c.field-meta.xml
<CustomField>
    <fullName>FIN_ActiveTodayBasedonDates__c</fullName>
    <formula>IF (AND(FIN_End_Date__c != null , TODAY() &gt;= FIN_Start_Date__c , TODAY() &lt;= FIN_End_Date__c ),
			true,
				IF (AND(FIN_End_Date__c = null , TODAY() &gt;= FIN_Start_Date__c),
								true, false
							)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Today Based on Dates?</label>
    <type>Checkbox</type>
</CustomField>