force-app/main/default/objects/ConsumptionSchedule/fields/FIN_Actual_Count__c.field-meta.xml
<CustomField>
    <fullName>FIN_Actual_Count__c</fullName>
    <label>Actual Ticket Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>