force-app/main/default/objects/ConsumptionSchedule/fields/FIN_Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>FIN_Actual_Revenue__c</fullName>
    <label>Actual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>