force-app/main/default/objects/ConsumptionSchedule/fields/FIN_Applied_Consumption_Rate__c.field-meta.xml
<CustomField>
    <fullName>FIN_Applied_Consumption_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Determines which of those Consumption rates apply to the current contract</description>
    <label>Applied Consumption Rate</label>
    <referenceTo>ConsumptionRate</referenceTo>
    <relationshipLabel>Consumption Schedules</relationshipLabel>
    <relationshipName>Consumption_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>