force-app/main/default/objects/ConsumptionSchedule/fields/FIN_ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>FIN_ApprovalStatus__c</fullName>
    <description>Captures approvals status of the record</description>
    <inlineHelpText>Captures approvals status of the record</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ApprovalStatus</valueSetName>
    </valueSet>
</CustomField>