force-app/main/default/objects/ConsumptionSchedule/fields/FIN_AvailableBalanceNew__c.field-meta.xml
<CustomField>
    <fullName>FIN_AvailableBalanceNew__c</fullName>
    <formula>IF( Accumulation_to_Target__c != 0, 
			Accumulation_to_Target__c - Starting_Balance__c - FIN_CalculatedBalance__c,
			IF (  Recoupment_Balance__c != 0,
							Recoupment_Balance__c - Starting_Balance__c - FIN_CalculatedBalance__c,
							0
			)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>