force-app/main/default/objects/ConsumptionSchedule/fields/FIN_CalculatedBalance__c.field-meta.xml
<CustomField>
    <fullName>FIN_CalculatedBalance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Calculated Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>