force-app/main/default/objects/ConsumptionSchedule/fields/FIN_DuplicateMessage__c.field-meta.xml
<CustomField>
    <fullName>FIN_DuplicateMessage__c</fullName>
    <label>Duplicate Message</label>
    <length>250</length>
    <type>Text</type>
</CustomField>