force-app/main/default/objects/ConsumptionSchedule/fields/FIN_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FIN_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>