force-app/main/default/objects/ConsumptionSchedule/fields/FIN_Financial_Code__c.field-meta.xml
<CustomField>
    <fullName>FIN_Financial_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Code</label>
    <referenceTo>FIN_Financial_Code__c</referenceTo>
    <relationshipLabel>Consumption Schedules</relationshipLabel>
    <relationshipName>Consumption_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>