force-app/main/default/objects/ConsumptionSchedule/fields/FIN_Starting_Revenue__c.field-meta.xml
<CustomField>
    <fullName>FIN_Starting_Revenue__c</fullName>
    <label>Starting Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>