force-app/main/default/objects/ConsumptionSchedule/fields/FIN_Starting_Ticket_Count__c.field-meta.xml
<CustomField>
    <fullName>FIN_Starting_Ticket_Count__c</fullName>
    <label>Starting Ticket Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>