force-app/main/default/objects/ConsumptionSchedule/fields/FIN_Target_Revenue__c.field-meta.xml
<CustomField>
    <fullName>FIN_Target_Revenue__c</fullName>
    <label>old Target Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>