force-app/main/default/objects/ConsumptionSchedule/fields/FIN_TotalRevenue__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalRevenue__c</fullName>
    <label>old Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>