force-app/main/default/objects/ConsumptionSchedule/fields/FIN_TotalRevenueNew__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalRevenueNew__c</fullName>
    <formula>FIN_Starting_Revenue__c +  FIN_Actual_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>