force-app/main/default/objects/ConsumptionSchedule/fields/FIN_TotalTicketCount__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalTicketCount__c</fullName>
    <label>old Total Ticket Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>