force-app/main/default/objects/ConsumptionSchedule/fields/FIN_TotalTicketCountNew__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalTicketCountNew__c</fullName>
    <formula>FIN_Starting_Ticket_Count__c +  FIN_Actual_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Ticket Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>