force-app/main/default/objects/ConsumptionSchedule/fields/Recoupment_Balance__c.field-meta.xml
<CustomField>
    <fullName>Recoupment_Balance__c</fullName>
    <description>Recoupment balance for Advance Recoupment accumulation rule</description>
    <inlineHelpText>Recoupment balance for Advance Recoupment accumulation rule</inlineHelpText>
    <label>Recoupment Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>