force-app/main/default/objects/ConsumptionSchedule/fields/Starting_Balance__c.field-meta.xml
<CustomField>
    <fullName>Starting_Balance__c</fullName>
    <description>Starting Balance for Advance Recoupment accumulation rule</description>
    <inlineHelpText>Starting Balance for Advance Recoupment accumulation rule</inlineHelpText>
    <label>Starting Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>