force-app/main/default/objects/ConsumptionSchedule/recordTypes/Accumulation_to_Target.recordType-meta.xml
<RecordType>
    <fullName>Accumulation_to_Target</fullName>
    <active>true</active>
    <description>Accumulation to Target</description>
    <label>Accumulation to Target</label>
</RecordType>