force-app/main/default/objects/ConsumptionSchedule/recordTypes/Advance_Recoupment.recordType-meta.xml
<RecordType>
    <fullName>Advance_Recoupment</fullName>
    <active>true</active>
    <description>Advance Recoupment</description>
    <label>Advance Recoupment</label>
</RecordType>