force-app/main/default/objects/ConsumptionSchedule/recordTypes/FIN_Consumption_Schedule.recordType-meta.xml
<RecordType>
    <fullName>FIN_Consumption_Schedule</fullName>
    <active>false</active>
    <description>Standard Consumption Schedule</description>
    <label>FIN Consumption Schedule</label>
</RecordType>