force-app/main/default/objects/ConsumptionSchedule/recordTypes/Revenue_Amount.recordType-meta.xml
<RecordType>
    <fullName>Revenue_Amount</fullName>
    <active>true</active>
    <description>Revenue Amount</description>
    <label>Revenue Amount</label>
</RecordType>