force-app/main/default/objects/ConsumptionSchedule/recordTypes/Ticket_Quantity.recordType-meta.xml
<RecordType>
    <fullName>Ticket_Quantity</fullName>
    <active>true</active>
    <description>Ticket Quantity</description>
    <label>Ticket Quantity</label>
</RecordType>