force-app/main/default/objects/ConsumptionSchedule/validationRules/Duplicate_Message.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate_Message</fullName>
    <active>true</active>
    <description>You are not able to approve and activate this Consumption Schedule, as there is already active Consumption Schedule of the same or similar record type during same effective days on this contract with same conditions.</description>
    <errorConditionFormula>FIN_DuplicateMessage__c != null</errorConditionFormula>
    <errorMessage>You are not able to approve and activate this Consumption Schedule, as there is already active Consumption Schedule of the same or similar record type during same effective days on this contract with same conditions.</errorMessage>
</ValidationRule>