force-app/main/default/objects/ConsumptionSchedule/validationRules/Prevent_Active_based_on_ApprovalStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Active_based_on_ApprovalStatus</fullName>
    <active>true</active>
    <description>This validation prevent activate Consumption Schedule when Approval Status is not &quot;Approved&quot;</description>
    <errorConditionFormula>IsActive &amp;&amp;  TEXT(FIN_ApprovalStatus__c) != &quot;Approved&quot;</errorConditionFormula>
    <errorDisplayField>IsActive</errorDisplayField>
    <errorMessage>Consumption Schedules cannot be Active when Approval Status is not &quot;Approved&quot;</errorMessage>
</ValidationRule>