force-app/main/default/objects/ConsumptionSchedule/validationRules/PreventActiveBasedOnFields.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventActiveBasedOnFields</fullName>
    <active>false</active>
    <description>You need to populate all fields</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Ticket_Quantity&apos; &amp;&amp; FIN_Actual_Count__c = null</errorConditionFormula>
    <errorMessage>You need to populate all fields</errorMessage>
</ValidationRule>