force-app/main/default/objects/ConsumptionSchedule/listViews/All_ConsumptionSchedules.listView-meta.xml
<ListView>
    <fullName>All_ConsumptionSchedules</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>IsActive</columns>
    <columns>Contract__c</columns>
    <columns>FIN_TotalRevenue__c</columns>
    <columns>FIN_TotalTicketCount__c</columns>
    <columns>FIN_AvailableBalanceNew__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Consumption Schedules</label>
</ListView>