force-app/main/default/objects/ConsumptionSchedule/listViews/My_ConsumptionSchedules.listView-meta.xml
<ListView>
    <fullName>My_ConsumptionSchedules</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>IsActive</columns>
    <columns>Contract__c</columns>
    <columns>FIN_TotalRevenue__c</columns>
    <columns>FIN_TotalTicketCount__c</columns>
    <columns>FIN_AvailableBalanceNew__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Consumption Schedules</label>
</ListView>